bk_ida/gccida/c1/dump_regset
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_regset/src/flow.c:4625:16: error: use of undeclared identifier 'off_607A24'
fprintf( outf, off_607A24, ( unsigned int)v7); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_regset/src/obj/flow.o] Error 1
